--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,18 @@
     <script src="/js/jquery.min.js"></script>
     <script src="/js/tether.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <div class="jumbotron bg-primary">
+          <div class="container text-center">
+            <h1 class="display-3">SIMPLE THE BEST</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p><a class="btn btn-primary btn-lg bg-primary" href="#" role="button">Learn more »</a></p>
 
-
+          </div>
+        </div>
+    <footer class="footer bg-inverse">
+          <div class="container">
+          <span class="text-muted">FOOTER: &copy; Zacarías Monzón</span>
+          </div>
+        </footer>
   </body>
 </html>
