Modificacion Package.json para Heroku

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>GameLayout Curso</title>
+    <title>Band Layout</title>
 
     <!-- Bootstrap
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
@@ -25,7 +25,7 @@
         <div class="container">
           <div class="row">
             <nav class="navbar navbar-toggleable-md navbar-inverse">
-              <a href="#" class="navbar-brand text-primary" id="logo">GAMELOGO</a>
+              <a href="#" class="navbar-brand text-primary" id="logo">BAND LOGO</a>
               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                   </button>
@@ -68,20 +68,20 @@
         <i class="fa fa-camera-retro fa-2x"></i>
       </div>
       <div class="col-sm-12 col-md-3 text-center text-uppercase text-md-left mb-md-0">
-        <p>Play in an inmmersive environment with your friends.</p>
+        <p>Revisa nuestra galería de fotos.</p>
       </div>
 
       <div class="col-sm-12 col-md-1 text-center mb-3 mb-md-0">
         <i class="fa fa-headphones fa-2x"></i>
       </div>
       <div class="col-sm-12 col-md-3 text-center text-uppercase text-md-left mb-md-0">
-        <p>Play offline or online with our state of the art net system.</p>
+        <p>Escucha las últimas novedades.</p>
       </div>
       <div class="col-sm-12 col-md-1 text-center mb-3 mb-md-0">
         <i class="fa fa-calendar fa-2x"></i>
       </div>
       <div class="col-sm-12 col-md-3 text-center text-uppercase text-md-left mb-md-0">
-        <p>Play in an inmmersive environment with your friends.</p>
+        <p>Consulta nuestra agenda de conciertos</p>
       </div>
 
 
@@ -92,8 +92,8 @@
 <div id="join-container" class="pt-lg-6 pb-lg-6 pt-5">
 
 <div class="container text-center">
-  <h2 class="text-uppercase">Give us your email</h2>
-  <h4 class="text-uppercase">We'll give you awesome stuff like beta invites and discounts.</h4>
+  <h2 class="text-uppercase">Registra tu email..</h2>
+  <h4 class="text-uppercase">Recibirás descuentos en entradas y descargas..</h4>
   <form>
     <div class="form-group row pt-lg-5 pb-lg-5 pt-5">
       <div class="col-sm-12 col-md-5 offset-md-2">
